force-app/main/default/objects/Opportunity/fields/Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Time__c</fullName>
    <label>Delivery Time</label>
    <type>DateTime</type>
</CustomField>