force-app/main/default/objects/Opportunity/fields/Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Date__c</fullName>
    <label>Ordered Date</label>
    <type>Date</type>
</CustomField>