force-app/main/default/objects/Opportunity/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <label>OrderId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>