force-app/main/default/objects/Opportunity/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LCD</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Pressure Cooker</fullName>
            </value>
            <value>
                <fullName>Mobiles</fullName>
            </value>
            <value>
                <fullName>Clothes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>