force-app/main/default/objects/Opportunity/fields/Sales_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Sales_End_Time__c</fullName>
    <label>Sales End Time</label>
    <type>DateTime</type>
</CustomField>