force-app/main/default/objects/Opportunity/fields/Sales_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Sales_Start_Time__c</fullName>
    <label>Sales Start Time</label>
    <type>DateTime</type>
</CustomField>