force-app/main/default/objects/Opportunity/fields/Service_Centers__c.field-meta.xml
<CustomField>
    <fullName>Service_Centers__c</fullName>
    <label>Service Centers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Vijayawad</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>