force-app/main/default/objects/Opportunity/fields/Service_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Expiry_Date__c</fullName>
    <label>Service Expiry Date</label>
    <type>DateTime</type>
</CustomField>