force-app/main/default/objects/Opportunity/fields/Service_Valid_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Valid_Date__c</fullName>
    <label>Service Valid Date</label>
    <type>DateTime</type>
</CustomField>