force-app/main/default/objects/Opportunity/fields/Stock_Storage_Locat__c.field-meta.xml
<CustomField>
    <fullName>Stock_Storage_Locat__c</fullName>
    <label>Stock Storage Locations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Koramangala</fullName>
            </value>
            <value>
                <fullName>Richmond Road</fullName>
            </value>
            <value>
                <fullName>Majestic</fullName>
            </value>
            <value>
                <fullName>K R Market</fullName>
            </value>
            <value>
                <fullName>Jayanagar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>