force-app/main/default/objects/Opportunity/recordTypes/Ameoba.recordType-meta.xml
<RecordType>
    <fullName>Ameoba</fullName>
    <active>true</active>
    <businessProcess>Amoeba sales</businessProcess>
    <label>Ameoba</label>
</RecordType>