force-app/main/default/objects/Opportunity/recordTypes/Ameoba_opp.recordType-meta.xml
<RecordType>
    <fullName>Ameoba_opp</fullName>
    <active>false</active>
    <businessProcess>Amoeba sales</businessProcess>
    <label>Ameoba opp</label>
</RecordType>