force-app/main/default/objects/Opportunity/recordTypes/Coke.recordType-meta.xml
<RecordType>
    <fullName>Coke</fullName>
    <active>true</active>
    <businessProcess>Coke Sales</businessProcess>
    <label>Coke</label>
</RecordType>