force-app/main/default/objects/Opportunity/recordTypes/Coke_Opp.recordType-meta.xml
<RecordType>
    <fullName>Coke_Opp</fullName>
    <active>true</active>
    <businessProcess>Coke Sales</businessProcess>
    <label>Coke Opp</label>
</RecordType>