force-app/main/default/objects/Opportunity/recordTypes/Lap.recordType-meta.xml
<RecordType>
    <fullName>Lap</fullName>
    <active>true</active>
    <businessProcess>Lap sales</businessProcess>
    <label>Lap</label>
</RecordType>